# ta-rss

./: .gitignore  Cargo.toml  README.md
src/: app.rs  event.rs  feed.rs  handler.rs  lib.rs  main.rs  render.rs  tui.rs  ui.rs  utility.rs
src/events/: event.rs  handler.rs  mod.rs
src/feed/: atom.rs  entry.rs  image.rs  mod.rs  rss.rs
src/tui/: mod.rs  render.rs
