[package]
name = "ta-rss"
version = "0.1.0"
authors = ["Matthias Buttgereit <matthias.buttgereit@outlook.com>"]
license = "MIT"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
anyhow = "1"
atom_syndication = "0.12"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0", features = ["event-stream"] }
futures = "0.3"
html2text = "0.12"
image = "0.25"
open = "5"
ratatui = "0.27"
ratatui-image = { version = "1", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["blocking"] }
rss = { version = "2", features = ["atom", "atom_syndication"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
panic = "abort"   # Don't unwind the stack when panicking.
codegen-units = 1 # No parallel codegen units.
lto = true        # Optimize at link time.
