[package]
name = "ta-rss"
version = "0.1.0"
authors = ["Matthias Buttgereit <matthias.buttgereit@outlook.com>"]
license = "MIT"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
#unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
anyhow = "1.0"
atom_syndication = "0.12"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
html2text = "0.12"
image = "0.25"
open = "5.3"
ratatui = { version = "0.28", features = ["unstable-rendered-line-info"] }
ratatui-image = { version = "1.0", features = ["crossterm"] }
reqwest = "0.12"
rss = { version = "2.0", features = ["atom", "atom_syndication"] }
scraper = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
panic = "abort"   # Don't unwind the stack when panicking.
codegen-units = 1 # No parallel codegen units.
lto = true        # Optimize at link time.
