[package]
name = "ta-rss"
version = "0.1.0"
authors = ["Matthias Buttgereit <matthias.buttgereit@outlook.com>"]
license = "MIT"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow = "1.0.89"
atom_syndication = "0.12.4"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
html2text = "0.12.6"
image = "0.25.2"
open = "5.3.0"
ratatui = { version = "0.28.1", features = ["unstable-rendered-line-info"] }
ratatui-image = { version = "1.0.5", features = ["crossterm"] }
reqwest = "0.12.8"
rss = { version = "2.0.9", features = ["atom", "atom_syndication"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
panic = "abort"   # Don't unwind the stack when panicking.
codegen-units = 1 # No parallel codegen units.
lto = true        # Optimize at link time.
